--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,13 @@
     <groupId>com.sf</groupId>
     <artifactId>DIGITwins</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>DIGITwins</name>
     <description>DIGITwins</description>
+    <modules>
+        <module>Employer-Service</module>
+        <module>Materiel-Service</module>
+    </modules>
     <properties>
         <java.version>11</java.version>
     </properties>
