--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 
-server.port=8082
+server.port=0
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.application.name=Employer-Service
 #spring.jpa.hibernate.ddl-auto = create-drop
