--- a/Materiel-Service/src/main/resources/application.properties
+++ b/Materiel-Service/src/main/resources/application.properties
@@ -3,7 +3,12 @@ spring.datasource.url=jdbc:h2:mem:materieldb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.h2.console.enabled=true
-server.port=8082
+
+server.port=8083
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 spring.application.name=Materiel-Service
 #spring.jpa.hibernate.ddl-auto = create-drop
