--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.h2.console.enabled=true
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.application.name=Employer-Service
+spring.application.name=employer-service
 #spring.jpa.hibernate.ddl-auto = create-drop
