--- a/Materiel-Service/src/main/resources/application.properties
+++ b/Materiel-Service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:h2:mem:materieldb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -8,7 +7,8 @@ spring.h2.console.enabled=true
 
 server.port=8083
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.application.name=Materiel-Service
+spring.application.name=materiel-service
 #spring.jpa.hibernate.ddl-auto = create-drop
