--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 
-server.port=0
+#server.port=0
 
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
