add Keycloack Security to ApiGateway

--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 
+#spring.security.oauth2.client.registration.oauth2-digitwins.client-id=oauth2-digitwins
+#spring.security.oauth2.client.registration.oauth2-digitwins.client-secret=FoodauXwucehhg9WiRmNbZ3aEbF9s17x
+#spring.security.oauth2.client.registration.oauth2-digitwins.scope=openid, profile, roles
+#spring.security.oauth2.client.registration.oauth2-digitwins.authorization-grant-type=client_credentials
+
+#spring.security.oauth2.client.provider.oauth2-digitwins.issuer-uri=http://localhost:9009/realms/digitwins-realm
+
+
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9009/realms/digitwins-realm/protocol/openid-connect/certs
+#logging.level.org.springframework.security=DEBUG
+
+
 spring.datasource.url=jdbc:h2:mem:employerdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -6,7 +18,7 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 
-#server.port=0
+server.port=9900
 
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
