--- a/Api-gateway/src/main/resources/application.properties
+++ b/Api-gateway/src/main/resources/application.properties
@@ -17,8 +17,6 @@ spring.cloud.gateway.routes[1].uri=lb://materiel-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/materiel-service/**
 
 
-
-
 ## Eureka Server Route
 spring.cloud.gateway.routes[2].id=eureka-server
 spring.cloud.gateway.routes[2].uri=http://localhost:8761
@@ -30,3 +28,4 @@ spring.cloud.gateway.routes[3].id=eureka-server-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9009/realms/spring-boot-microservices-realm
