--- a/Materiel-Service/src/main/resources/application.properties
+++ b/Materiel-Service/src/main/resources/application.properties
@@ -12,3 +12,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.application.name=materiel-service
 #spring.jpa.hibernate.ddl-auto = create-drop
+
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9009/realms/digitwins-realm/protocol/openid-connect/certs
