--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -25,3 +25,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.application.name=employer-service
 #spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9009/realms/spring-boot-microservices-realm/protocol/openid-connect/certs
