--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -11,13 +11,14 @@
 #logging.level.org.springframework.security=DEBUG
 
 
-spring.datasource.url=jdbc:h2:mem:employerdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.h2.console.enabled=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/employerdb?createDatabaseIfNotExist=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=GMT
+spring.datasource.username=ecommerceapp
+spring.datasource.password=ecommerceapp
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
 server.port=9900
 
 eureka.instance.hostname=localhost
