--- a/Materiel-Service/src/main/resources/application.properties
+++ b/Materiel-Service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:materieldb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/materieldb?createDatabaseIfNotExist=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=GMT
+spring.datasource.username=ecommerceapp
+spring.datasource.password=ecommerceapp
 
-spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
 
 server.port=8083
 
