--- a/Employer-Service/src/main/resources/application.properties
+++ b/Employer-Service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.username=ecommerceapp
 spring.datasource.password=ecommerceapp
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 server.port=9900
 
 eureka.instance.hostname=localhost
