--- a/Materiel-Service/src/main/resources/application.properties
+++ b/Materiel-Service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=ecommerceapp
 spring.datasource.password=ecommerceapp
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 server.port=8083
 
